--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
+/* Colors */
+/* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 .header {
-  position: fixed;
   height: 4.375rem;
 }
 
@@ -57,13 +58,230 @@
   font-size: 1.125rem;
   margin: 0 auto;
   text-align: center;
+  font-family: "Open Sans", sans-serif;
+}
+
+.section__marketing__btn {
+  width: 19.375rem;
+  height: 4.1875rem;
+  background-color: #08A6E4;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  line-height: 1.375rem;
+  font-weight: 700;
+  border: none;
+  margin: 0 auto;
+  display: block;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+  cursor: pointer;
+  border-radius: 2.5rem;
+  box-shadow: 5px 10px 14px 0px rgba(7, 172, 230, 0.2901960784);
+}
+
+.section__marketing__img {
+  width: 48.6875rem;
+  height: 16.6875rem;
+  position: relative;
+  left: -12.5938rem;
+}
+
+.section__marketing__container {
+  width: 18.9375rem;
+  height: 7rem;
+}
+
+.section__marketing__containerh2__h2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 1.875rem;
+  line-height: 2.1875rem;
+  text-align: center;
+}
+
+.section__marketing__icons {
+  width: 2.75rem;
+  height: 3.25rem;
+}
+
+/* Ellipse divs */
+.section__marketing__ellipse__div__red__box {
+  display: block;
+  position: relative;
+  width: 25rem;
+  height: 10rem;
+  border: rgba(7, 172, 230, 0.2901960784) 3px solid;
+}
+
+.section__marketing__ellipse__div__blue__box {
+  display: block;
+  position: relative;
+  width: 25rem;
+  height: 10rem;
+  border: rgba(7, 172, 230, 0.2901960784) 3px solid;
+}
+
+.section__marketing__ellipse__div__green__box {
+  display: block;
+  position: relative;
+  width: 25rem;
+  height: 10rem;
+  border: rgba(7, 172, 230, 0.2901960784) 3px solid;
+}
+
+/* Styles of the ellipse and icon box */
+.section__marketing__ellipse__div__red--ellipse {
+  border: 1px solid red;
+  width: 3.9194rem;
+  position: absolute;
+  bottom: 2.5rem;
+  left: 1.25rem;
+  z-index: 1;
+}
+
+.section__marketing__ellipse__div__blue--ellipse {
+  border: 1px solid red;
+  width: 3.9194rem;
+  position: absolute;
+  bottom: 2.5rem;
+  left: 1.25rem;
+  z-index: 1;
+}
+
+.section__marketing__ellipse__div__green--ellipse {
+  border: 1px solid red;
+  width: 3.9194rem;
+  position: absolute;
+  bottom: 2.5rem;
+  left: 1.25rem;
+  z-index: 1;
+}
+
+/* Ellipse styles */
+.section__marketing__ellipse__div__red--ellipse {
+  width: 3.9194rem;
+  height: 3.9194rem;
+  background-color: #FB3B64;
+  border-radius: 50%;
+  position: relative;
+  left: 10.5rem;
+  top: 1.25rem;
+}
+
+.section__marketing__ellipse__div__blue--ellipse2 {
+  width: 3.9194rem;
+  height: 3.9194rem;
+  background-color: #08A6E4;
+  border-radius: 50%;
+  position: relative;
+  left: 10.5rem;
+  top: 1.25rem;
+}
+
+.section__marketing__ellipse__div__green--ellipse3 {
+  width: 3.9194rem;
+  height: 3.9194rem;
+  background-color: #55DFB4;
+  border-radius: 50%;
+  position: relative;
+  left: 10.5rem;
+  top: 1.25rem;
+}
+
+/* Styles of the icon */
+.section__marketing__ellipse__div__red__icon__box__icon {
+  content: url("../resources/svg/Person2.svg");
+  width: 2.75rem;
+  height: 3.25rem;
+  position: absolute;
+  left: 12rem;
+  top: 1rem;
+  z-index: 2;
+}
+
+.section__marketing__ellipse__div__blue__icon__box__icon {
+  content: url("../resources/svg/Eye2.svg");
+  width: 4.0894rem;
+  height: 2.2813rem;
+  position: absolute;
+  left: 12rem;
+  top: 2rem;
+  z-index: 2;
+}
+
+.section__marketing__ellipse__div__green__icon__box__icon {
+  content: url("../resources/svg/Catalog2.svg");
+  width: 3.25rem;
+  height: 3rem;
+  position: absolute;
+  left: 12rem;
+  top: 1.8rem;
+  z-index: 2;
+}
+
+/* Styles of the number entries */
+.section__marketing__ellipse__div__red__numberEntries--p1 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 1.25rem;
+  text-align: center;
+  position: relative;
+  bottom: 3.5rem;
+}
+
+.section__marketing__ellipse__div__blue__numberEntries--p1 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 1.25rem;
+  text-align: center;
+  position: relative;
+  bottom: 3.5rem;
+}
+
+.section__marketing__ellipse__div__green__numberEntries--p1 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 1.25rem;
+  text-align: center;
+  position: relative;
+  bottom: 3.5rem;
+}
+
+.section__marketing__ellipse__div__red__numberEntries--p2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 1.0625rem;
+  color: #A5A5A5;
+  text-align: center;
+  position: relative;
+  bottom: 3.5rem;
+}
+
+.section__marketing__ellipse__div__blue__numberEntries--p2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 1.0625rem;
+  color: #A5A5A5;
+  text-align: center;
+  position: relative;
+  bottom: 3.5rem;
+}
+
+.section__marketing__ellipse__div__green__numberEntries--p2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 1.0625rem;
+  color: #A5A5A5;
+  text-align: center;
+  position: relative;
+  bottom: 3.5rem;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  width: 100%;
 }
 
 body {
