--- a/sass/_section_marketing.scss
+++ b/sass/_section_marketing.scss
@@ -1,4 +1,4 @@
-@import "_fonts";
+@use "_variables" as *;
 
 .section__marketing {
     width: 100%;
@@ -25,4 +25,183 @@
     font-size: 1.125rem;
     margin: 0 auto;
     text-align: center;
+    font-family: $openSansFont;
+}
+
+.section__marketing__btn {
+    width: 19.375rem;
+    height: 4.1875rem;
+    background-color: $blue;
+    color: white;
+    font-family: $openSansFont;
+    font-size: 1rem;
+    line-height: 1.375rem;
+    font-weight: 700;
+    border: none;
+    margin: 0 auto;
+    display: block;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    cursor: pointer;
+    border-radius: 2.5rem;
+    box-shadow: 5px 10px 14px 0px #07ACE64A;
+}
+
+.section__marketing__img {
+    width: 48.6875rem;
+    height: 16.6875rem;
+    position: relative;
+    left: -12.5938rem;
+}
+
+.section__marketing__container {
+    width: 18.9375rem;
+    height: 7rem;
+
+}
+
+.section__marketing__containerh2__h2 {
+    font-family: $ralewayFont;
+    font-weight: 300;
+    font-size: 1.875rem;
+    line-height: 2.1875rem;
+    text-align: center;
+}
+
+.section__marketing__icons {
+    width: 2.75rem;
+    height: 3.25rem;
+}
+
+/* Ellipse divs */
+@mixin ellipse-divs () {
+    display: block;
+    position: relative;
+    width: 25rem;
+    height: 10rem;
+    border: #07ACE64A 3px solid;
+}
+
+.section__marketing__ellipse__div__red__box {
+    @include ellipse-divs();
+}
+
+.section__marketing__ellipse__div__blue__box {
+    @include ellipse-divs();
+}
+
+.section__marketing__ellipse__div__green__box {
+    @include ellipse-divs();
+}
+
+/* Styles of the ellipse and icon box */
+@mixin icon-ellipse-box-style () {
+    border: 1px solid red;
+    width: 3.9194rem;
+    position: absolute;
+    bottom: 2.5rem;
+    left: 1.25rem;
+    z-index: 1;
+}
+
+.section__marketing__ellipse__div__red--ellipse {
+    @include icon-ellipse-box-style();
+}
+
+.section__marketing__ellipse__div__blue--ellipse {
+    @include icon-ellipse-box-style();
+}
+
+.section__marketing__ellipse__div__green--ellipse {
+    @include icon-ellipse-box-style();
+}
+
+/* Ellipse styles */
+@mixin ellipse-style ($bg_color) {
+    width: 3.9194rem;
+    height: 3.9194rem;
+    background-color: $bg_color;
+    border-radius: 50%;
+    position: relative;
+    left: 10.5rem;
+    top: 1.25rem;
+}
+
+.section__marketing__ellipse__div__red--ellipse {
+    @include ellipse-style($red);
+}
+
+.section__marketing__ellipse__div__blue--ellipse2 {
+    @include ellipse-style($blue);
+}
+
+.section__marketing__ellipse__div__green--ellipse3 {
+    @include ellipse-style($green);
+}
+
+/* Styles of the icon */
+@mixin icon-style ($icon, $width, $height, $top) {
+    content: url($icon);
+    width: $width;
+    height: $height;
+    position: absolute;
+    left: 12rem;
+    top: $top;
+    z-index: 2;
+}
+
+.section__marketing__ellipse__div__red__icon__box__icon {
+    @include icon-style('../resources/svg/Person2.svg', 2.75rem, 3.25rem, 1rem);
+}
+
+.section__marketing__ellipse__div__blue__icon__box__icon {
+    @include icon-style('../resources/svg/Eye2.svg', 4.0894rem, 2.2813rem, 2rem);
+}
+
+.section__marketing__ellipse__div__green__icon__box__icon {
+    @include icon-style('../resources/svg/Catalog2.svg', 3.25rem, 3rem, 1.8rem);
+}
+
+/* Styles of the number entries */
+@mixin numberEntries-style () {
+    font-family: $ralewayFont;
+    font-weight: 800;
+    font-size: 1.25rem;
+    text-align: center;
+    position: relative;
+    bottom: 3.5rem;
+}
+
+.section__marketing__ellipse__div__red__numberEntries--p1 {
+    @include numberEntries-style();
+}
+
+.section__marketing__ellipse__div__blue__numberEntries--p1 {
+    @include numberEntries-style();
+}
+
+.section__marketing__ellipse__div__green__numberEntries--p1 {
+    @include numberEntries-style();
+}
+
+@mixin numberEntries2-style () {
+    font-family: $ralewayFont;
+    font-weight: 400;
+    font-size: 1.0625rem;
+    color: $grey_marketing;
+    text-align: center;
+    position: relative;
+    bottom: 3.5rem;
+}
+
+.section__marketing__ellipse__div__red__numberEntries--p2 {
+    @include numberEntries2-style();
+}
+
+.section__marketing__ellipse__div__blue__numberEntries--p2 {
+    @include numberEntries2-style();
+}
+
+.section__marketing__ellipse__div__green__numberEntries--p2 {
+    @include numberEntries2-style();
 }
