--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,200 @@
   bottom: 3.5rem;
 }
 
+/* Section style */
+.section__advantages {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: #F7F7F7;
+}
+
+/* Frames styles */
+.section__advantages__first__frame {
+  width: 19.625rem;
+  height: 23.125rem;
+  top: 1.25rem;
+  border-radius: 0.3125rem;
+  border: 1px solid #E8E9ED;
+  background-color: #FFFFFF;
+  position: relative;
+  margin: 2.625rem 1.9375rem 2.5625rem 1.875rem;
+}
+
+.section__advantages__second__frame {
+  width: 19.6875rem;
+  height: 23.125rem;
+  top: auto;
+  border-radius: 0.3125rem;
+  border: 1px solid #E8E9ED;
+  background-color: #FFFFFF;
+  position: relative;
+  margin: 2.625rem 1.9375rem 2.5625rem 1.875rem;
+}
+
+.section__advantages__third__frame {
+  width: 19.625rem;
+  height: 18.625rem;
+  top: auto;
+  border-radius: 0.3125rem;
+  border: 1px solid #E8E9ED;
+  background-color: #FFFFFF;
+  position: relative;
+  margin: 2.625rem 1.9375rem 2.5625rem 1.875rem;
+}
+
+/* Third frame extension style */
+.section__advantages__third__frame__extension {
+  width: 19.625rem;
+  height: 12.1875rem;
+  top: auto;
+  bottom: auto;
+  left: auto;
+}
+
+/* Image styles */
+.section__advantages__first__frame img {
+  width: 12.0475rem;
+  height: 6.8706rem;
+  top: 2.3194rem;
+  left: 4rem;
+  z-index: 2;
+  position: relative;
+}
+
+.section__advantages__second__frame img {
+  width: 12.0475rem;
+  height: 6.8706rem;
+  top: 3rem;
+  left: 6rem;
+  z-index: 2;
+  position: relative;
+}
+
+.section__advantages__third__frame__extension img {
+  width: 18.4831rem;
+  height: 12.9825rem;
+  top: auto;
+  left: 1.7rem;
+  z-index: 2;
+  position: relative;
+  bottom: 1.25rem;
+}
+
+/* Ellipse styles*/
+.section__advantages__first__frame__ellipse {
+  width: 5.6325rem;
+  height: 5.6325rem;
+  bottom: 6.25rem;
+  left: 12.5rem;
+  border-radius: 2.5625rem;
+  transform: rotate(45deg);
+  background-color: #FB3B64;
+  position: relative;
+}
+
+.section__advantages__second__frame__ellipse {
+  width: 8.2425rem;
+  height: 8.2312rem;
+  bottom: 5.625rem;
+  left: 6.25rem;
+  border-radius: 50%;
+  transform: rotate(0deg);
+  background-color: #08A6E4;
+  position: relative;
+}
+
+.section__advantages__third__frame__extension__rectangle {
+  width: 19.625rem;
+  height: 12.1875rem;
+  bottom: 16.25rem;
+  left: 1.9rem;
+  border-radius: 0.3125rem;
+  transform: rotate(1px solid #F2F2F2);
+  background-color: #55DFB4;
+  position: relative;
+}
+
+/* Rectangle style (3rd frame) */
+/* Text styles */
+.section__advantages__first__frame h2 {
+  width: 12.375rem;
+  height: 4.5rem;
+  bottom: auto;
+  top: auto;
+  left: 1.375rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.875rem;
+  font-weight: 400;
+  line-height: 2.2012rem;
+  position: relative;
+}
+
+.section__advantages__first__frame p {
+  width: 17rem;
+  height: 5.25rem;
+  bottom: auto;
+  top: auto;
+  left: 1.3125rem;
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.3125rem;
+  position: relative;
+}
+
+.section__advantages__second__frame h2 {
+  width: 13.625rem;
+  height: 4.375rem;
+  bottom: 4rem;
+  top: auto;
+  left: 1.375rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.875rem;
+  font-weight: 400;
+  line-height: 2.2012rem;
+  position: relative;
+}
+
+.section__advantages__second__frame p {
+  width: 17rem;
+  height: 4.8125rem;
+  bottom: 3rem;
+  top: auto;
+  left: 1.3125rem;
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.1875rem;
+  position: relative;
+}
+
+.section__advantages__third__frame h2 {
+  width: 17.125rem;
+  height: 6.8125rem;
+  bottom: auto;
+  top: 1rem;
+  left: 1.375rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.875rem;
+  font-weight: 400;
+  line-height: 2.2012rem;
+  position: relative;
+}
+
+.section__advantages__third__frame p {
+  width: 17.125rem;
+  height: 7.125rem;
+  bottom: auto;
+  top: 1.875rem;
+  left: 1.3125rem;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.3619rem;
+  position: relative;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
