--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,6 +3,10 @@ $blue: #08A6E4;
 $red: #FB3B64;
 $green: #55DFB4;
 $grey_marketing: #A5A5A5;
+$white_advantages_frames: #FFFFFF;
+$white_advantages_frames_borderColor: #E8E9ED;
+$grey_border_color_third_frame_rectangle: #F2F2F2;
+$section_advantages_bgColor: #F7F7F7;
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
