--- a/sass/_section_marketing.scss
+++ b/sass/_section_marketing.scss
@@ -203,3 +203,20 @@
 .section__marketing__ellipse__div__green__numberEntries--p2 {
     @include numberEntries2-style();
 }
+
+/* Styles of the hr */
+@mixin hr-style () {
+    display: none;
+}
+
+.section__advantages__first__frame hr {
+    @include hr-style();
+}
+
+.section__advantages__second__frame hr {
+    @include hr-style();
+}
+
+.section__advantages__third__frame hr {
+    @include hr-style();
+}
