--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,8 @@ $white_advantages_frames_borderColor: #E8E9ED;
 $grey_border_color_third_frame_rectangle: #F2F2F2;
 $section_advantages_bgColor: #F7F7F7;
 $section_cards_pColor: #13253B;
+$section_input_underline: #95989A;
+$text_consent: #707070;
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
