--- a/css/style.css
+++ b/css/style.css
@@ -925,6 +925,47 @@
   position: relative;
 }
 
+footer {
+  width: 100%;
+  height: 5.5625rem;
+  position: absolute;
+  box-shadow: 0px -5px 40px 0px rgba(0, 0, 0, 0.2);
+}
+
+.footer-text h2 {
+  width: 12.5rem;
+  height: 1.875rem;
+  bottom: auto;
+  top: 1.405rem;
+  left: 1.0625rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.625rem;
+  font-weight: 300;
+  line-height: 1.875rem;
+  position: relative;
+  color: #08A6E4;
+}
+
+.footer-text p {
+  width: 11.6875rem;
+  height: 0.9375rem;
+  bottom: auto;
+  top: 1.5rem;
+  left: 1.0625rem;
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.6875rem;
+  font-weight: 400;
+  line-height: 0.9363rem;
+  position: relative;
+  color: #A5A5A5;
+}
+
+.footer-text img {
+  position: relative;
+  left: 19rem;
+  margin-right: 0.7rem;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
