--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 .header {
   height: 4.375rem;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2901960784);
 }
 
 .header__logo {
@@ -34,6 +35,40 @@
   box-shadow: 0rem 0.1875rem 0.375rem 0rem rgba(0, 0, 0, 0.2901960784);
 }
 
+/* Desktop */
+@media screen and (min-width: 768px) {
+  .header {
+    height: 70px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .header__logo {
+    font-size: 2rem;
+    margin-left: 3.125rem;
+    margin-bottom: 1.25rem;
+  }
+  .header__button__hamburger {
+    display: none;
+  }
+  .header__nav__list {
+    display: flex;
+  }
+  .header__nav__list li {
+    list-style: none;
+    margin-right: 2.5rem;
+  }
+  .header__nav__list li a {
+    font-family: "Open Sans", sans-serif;
+    font-size: 0.6875rem;
+    font-weight: 700;
+    line-height: 0.9375rem;
+    color: #000000;
+    text-decoration: none;
+  }
+}
 .section__marketing {
   width: 100%;
   height: 100%;
