--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,6 +2,8 @@
 
 .header {
     height: 4.375rem;
+    box-shadow: 0px 3px 6px 0px #0000004A;
+
 }
 
 .header__logo {
@@ -30,4 +32,44 @@
 
 .header__hr {
     box-shadow: 0rem 0.1875rem 0.375rem 0rem #0000004A;
+}
+
+/* Desktop */
+@media screen and (min-width: 768px) {
+    .header {
+        height: 70px;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header__logo {
+        font-size: 2rem;
+        margin-left: 3.125rem;
+        margin-bottom: 1.25rem;
+    }
+
+    .header__button__hamburger {
+        display: none;
+    }
+
+    .header__nav__list {
+        display: flex;
+    }
+
+    .header__nav__list li {
+        list-style: none;
+        margin-right: 2.5rem;
+    }
+
+    .header__nav__list li a {
+        font-family: $openSansFont;
+        font-size: .6875rem;
+        font-weight: 700;
+        line-height: .9375rem;
+        color: $black;
+        text-decoration: none;
+    }
 }
