--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
+@charset "UTF-8";
 /* Colors */
 /* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 .header {
   height: 4.375rem;
-  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2901960784);
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2901960784);
 }
 
 .header__logo {
@@ -31,10 +32,6 @@
   display: none;
 }
 
-.header__hr {
-  box-shadow: 0rem 0.1875rem 0.375rem 0rem rgba(0, 0, 0, 0.2901960784);
-}
-
 /* Desktop */
 @media screen and (min-width: 768px) {
   .header {
@@ -58,7 +55,9 @@
   }
   .header__nav__list li {
     list-style: none;
-    margin-right: 2.5rem;
+    margin-right: 5rem;
+    position: relative;
+    /* Necesario para posicionar la barra */
   }
   .header__nav__list li a {
     font-family: "Open Sans", sans-serif;
@@ -67,6 +66,30 @@
     line-height: 0.9375rem;
     color: #000000;
     text-decoration: none;
+    display: inline-block;
+    /* Asegura que el span ocupe el ancho del texto */
+  }
+  .header__nav__list li a:hover {
+    color: #08A6E4;
+  }
+  .header__nav__list__list__item .underline {
+    display: block;
+    width: 0;
+    /* Inicialmente la barra no tiene ancho */
+    height: 0.25rem;
+    /* Altura de la barra */
+    background-color: #08A6E4;
+    /* Color de la barra */
+    position: absolute;
+    bottom: -1.6rem;
+    /* Posición debajo del texto */
+    left: -0.625rem;
+    transition: width 0.3s ease;
+    /* Animación suave */
+  }
+  .header__nav__list__list__item:hover .underline {
+    width: 150%;
+    /* La barra se expande al 100% del ancho del texto */
   }
 }
 .section__marketing {
