--- a/sass/_section_marketing.scss
+++ b/sass/_section_marketing.scss
@@ -1,4 +1,6 @@
 @use "_variables" as *;
+@use "_section_frames" as sectionFrames;
+@use "_section_cards" as sectionCards;
 
 .section__marketing {
     width: 100%;
@@ -219,4 +221,35 @@
 
 .section__advantages__third__frame hr {
     @include hr-style();
+}
+
+
+/* Desktop version */
+@media screen and (min-width: 768px) {
+    .section__marketing__h1 {
+        @include sectionFrames.textStyle(14.125rem, 3.5625rem, auto, auto, 44%, $ralewayFont, 3.0625rem, 400, 3.5625rem);
+    }
+
+    .section__marketing__p {
+        @include sectionFrames.textStyle(30rem, 1.375rem, auto, auto, auto, $openSansFont, 1rem, 400, 1.375rem);
+    }
+
+    .section__marketing__btn {
+        @include sectionCards.buttonStyle(27.5rem, 4.1875rem, auto, auto, auto, $openSansFont,
+            1rem, 700, 1.375rem, $white_advantages_frames, $blue, 2.5rem, 1.4375rem);
+    }
+
+    .section__marketing__img {
+        width: 110%;
+        height: 20%;
+        position: relative;
+    }
+
+    .section_marketing__ellipse__container {
+        display: flex;
+        justify-content: center;
+        margin-top: 80px;
+    }
+
+
 }
