--- a/sass/_section_cards.scss
+++ b/sass/_section_cards.scss
@@ -188,6 +188,7 @@
     .section__cards__pricing__div {
         display: flex;
         justify-content: center;
+        margin-bottom: 2.75rem;
     }
 
     .section__cards__pricing h2 {
