--- a/css/style.css
+++ b/css/style.css
@@ -707,6 +707,7 @@
   .section__cards__pricing__div {
     display: flex;
     justify-content: center;
+    margin-bottom: 2.75rem;
   }
   .section__cards__pricing h2 {
     margin-left: 40%;
@@ -1183,7 +1184,7 @@
 }
 
 /* Form Style*/
-.section__contact__div form {
+.section__contact__div__form form {
   width: 19.5rem;
   height: 9.8125rem;
   top: 2rem;
@@ -1193,24 +1194,25 @@
 }
 
 /* Label Style */
-.section__contact__div label {
+.section__contact__div__form label {
   width: auto;
   height: auto;
   bottom: auto;
-  top: 0.8rem;
+  top: 2rem;
   left: auto;
   font-family: "Open Sans", sans-serif;
   font-size: 0.6875rem;
   font-weight: 600;
   line-height: 0.9363rem;
   position: relative;
+  display: block;
   color: #08A6E4;
 }
 
 /* Input Style */
-.section__contact__div input {
+.section__contact__div__form input {
   width: 19.5rem;
-  height: 0rem;
+  height: 2rem;
   top: 0.8rem;
   left: auto;
   bottom: auto;
@@ -1219,12 +1221,13 @@
   font-weight: 400;
   line-height: 22px;
   color: #A5A5A5;
-  border: 1px solid #95989A;
+  border: none;
   position: relative;
+  border-bottom: 1px solid #95989A;
 }
 
 /* Consent Style */
-.section__contact__div input[type=checkbox] {
+.section__contact__div__form input[type=checkbox] {
   width: 1.5rem;
   height: 1.5rem;
   top: 2rem;
@@ -1232,9 +1235,10 @@
   bottom: auto;
   position: relative;
   appearance: none;
+  border: 1px solid #95989A;
 }
 
-.section__contact__div input[type=checkbox]:checked::after {
+.section__contact__div__form input[type=checkbox]:checked::after {
   content: "";
   display: block;
   width: 13px;
@@ -1278,8 +1282,71 @@
   border: none;
   border-radius: 2.5rem;
   position: relative;
+  margin-bottom: 2.75rem;
 }
 
+/* Desktop version */
+@media screen and (min-width: 768px) {
+  .section__contact {
+    width: 55%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .section__contact__div h2 {
+    height: 3.5625rem;
+    width: 21.4375rem;
+  }
+  .section__contact__div p:not(p[class=section__contact__div__consent]):not(p[class=section__contact__div__p]) {
+    top: 18%;
+  }
+  .section__contact__div p:not(p[class=section__contact__div__consent]) {
+    width: 21.4375rem;
+    top: 7%;
+  }
+  .section__contact__div a[href="tel:123456789"] {
+    position: relative;
+    left: 60%;
+    bottom: 6.5%;
+  }
+  .section__contact__div img {
+    top: 20%;
+  }
+  .section__contact__div__form form {
+    width: 27.5rem;
+    height: 9.8125rem;
+    top: auto;
+    left: 70%;
+  }
+  .section__contact__div__form label {
+    position: relative;
+    top: 1.5rem;
+    left: 0.8rem;
+    margin-bottom: 1.25rem;
+  }
+  .section__contact__div__form input:not([type=checkbox]) {
+    width: 27.5rem;
+    height: 2rem;
+    top: 1.5rem;
+    left: 0.8rem;
+    margin-bottom: 1.25rem;
+    border: none;
+    border-bottom: 1px solid #95989A;
+  }
+  .section__contact__div__form input[type=checkbox] {
+    left: 0.9375rem;
+  }
+  .section__contact__div__consent {
+    width: 25.3125rem;
+    height: 6.75rem;
+    left: 3rem;
+  }
+  .section__contact__div__form__button {
+    width: 14.125rem;
+    height: 3.5625rem;
+    left: 13rem;
+  }
+}
 footer {
   width: 100%;
   height: 5.5625rem;
@@ -1319,6 +1386,7 @@ footer {
   position: relative;
   left: 19rem;
   margin-right: 0.7rem;
+  bottom: 17px;
 }
 
 * {
